gitops/environments/envs/prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "<WL_SERVICE_NAME>"
spec:
  template:
    spec:
      containers:
      - name: "<WL_SERVICE_NAME>-container"
        env: []
