gitops/environments/envs/prod/version.yaml
---
# Workload versions (image + image tag)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "<WL_SERVICE_NAME>"
spec:
  template:
    spec:
      containers:
      - name: "<WL_SERVICE_NAME>-container"
        image: "<WL_SERVICE_IMAGE>"
