gitops/environments/envs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "<WL_SERVICE_NAME>"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "<WL_SERVICE_URL>"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "<WL_SERVICE_NAME>"
                port:
                  name: http
  tls:
    - hosts:
        - "<WL_SERVICE_URL>"
      secretName: <WL_SERVICE_NAME>-tls
